--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,20 +1,25 @@
+//mixin pour les ombres sur les conteneurs
 @mixin initial-shadow-element ($size: $shadow-size, $blur-effect: $shadow-blur-effect, $colour: $colour-shadow ) {
     box-shadow: $size $blur-effect $colour;
 }
+
+//mixin pour les règles communes aux images mises en background dans les pages menus
 @mixin display-bg-img {
-background-size: cover;
-background-repeat: no-repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-@mixin dimension-text-ellipsis{
-width: 100%;
-height: auto;
-padding-left: 1rem;
-white-space: nowrap;
-overflow: hidden;
-text-overflow: ellipsis;
+//mixin pour pour tronquer les éléments avec ellipsis quand ils dépassent
+@mixin dimension-text-ellipsis {
+    width: 100%;
+    height: auto;
+    padding-left: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
+//mediaqueries de la version petit mobile
 $breakpoints-small-mobile: (
     mobile: 360px
 );
@@ -25,6 +30,7 @@ $breakpoints-small-mobile: (
     }
 }
 
+//mediaqueries de la version tablette
 $breakpoints-tablette: (
     tablette: 767px
 );
@@ -35,6 +41,7 @@ $breakpoints-tablette: (
     }
 }
 
+//mediaqueries de la version desktop
 $breakpoints-desktop: (
     desktop: 992px
 );
