--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,12 +1,24 @@
+//couleur violette 
 $colour-primary : #9356DC;
+//couleur rose
 $colour-secondary: #FF79DA;
+//couleur vert clair
 $colour-tertiary: #99E2D0;
+//couleur gris foncé pour le footer
 $colour-quartery:rgb(49, 49, 49);
+//couleur de texte blanc
 $colour-text :white;
+//taille des ombres
 $shadow-size: 0.5rem 0.2rem;
+//flou des ombres
 $shadow-blur-effect: 1rem;
+//couleur des ombres
 $colour-shadow: rgba(202,198,198,1);
+//marge commune à certains conteneurs
 $margin-elements : 1rem 1rem 1rem 1rem;
+//bordure des menus
 $border-selector: 0.938rem 0.938rem 0.938rem 0.938rem;
+//bordure des cartes de restaurants
 $border-card : 1.25rem 1.25rem 1.25rem 1.25rem;
+//couleur de fond des conteneurs principaux
 $background-container:  #f2f2f2;
