--- a/sass/components/_btn_new.scss
+++ b/sass/components/_btn_new.scss
@@ -1,19 +1,20 @@
+/*position, taille, couleur et forme des boutons "Nouveau"*/
 .btn {
     position: absolute;
     top: 0.5rem;
     right: 1rem;
-  
+
     &__new {
         @include text-color;
         width: 80%;
         height: auto;
         margin: $margin-elements;
-        padding:0.5rem;
+        padding: 0.5rem;
         font-size: 1rem;
         text-align: center;
         background: $colour-tertiary;
         cursor: pointer;
         border-radius: 0.188rem 0.188rem 0.188rem 0.188rem;
-        border: none;   
+        border: none;
     }
 }
