--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,3 +1,4 @@
+/*position, couleur et taille du fonds de page du loader et sa durée avant disparition*/
 .loader {
     width: 100%;
     height: 100%;
@@ -12,8 +13,22 @@
     background-color: $colour-tertiary;
     animation: opacity 1000ms 2100ms both;
     -webkit-animation: opacity 1000ms 2100ms both;
-    &__heading
-{
+
+    /*animation pour l'apparition et de la disparition du loader laissant place à la page chargée*/
+    @keyframes opacity {
+        0% {
+            opacity: 1;
+            z-index: 4;
+        }
+
+        100% {
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+
+    //position, taille, couleur, forme et animation pour le logo dans le loader
+    &__heading {
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -30,9 +45,9 @@
         animation: loader 1500ms 100ms cubic-bezier(1, 0.8, 0.3, 05) 1;
         -webkit-animation: loader 1500ms 1200ms cubic-bezier(2, 1.8, 3, 5) 1;
     }
-
 }
 
+/*animation du logo dans le loader*/
 @keyframes loader {
     0% {
         transform: scaleY(0.1);
@@ -67,18 +82,7 @@
     }
 }
 
-@keyframes opacity {
-    0% {
-        opacity: 1;
-        z-index: 4;
-    }
-
-    100% {
-        opacity: 0;
-        z-index: -1;
-    }
-}
-
+/*position, dimension et durée de l'animation appliqués au conteneur des points du loader*/
 .loader-dots {
     position: relative;
     display: flex;
@@ -91,6 +95,7 @@
     -webkit-animation: opacity 3000ms 3000ms both;
 }
 
+/*position, taille, couleur et forme des points du loader*/
 .loader-dots div {
     top: 2rem;
     left: 2rem;
@@ -104,24 +109,28 @@
     -o-border-radius: 50%;
 }
 
+/*position et décalage de l'animation du premier point du loader*/
 .loader-dots div:nth-child(1) {
     left: 2rem;
     animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
     -webkit-animation: pulsar 1200ms 500ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
+/*position et décalage de l'animation  du deuxième point du loader*/
 .loader-dots div:nth-child(2) {
     left: 6rem;
     animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
     -webkit-animation: pulsar 1300ms 600ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
+/*position et décalage de l'animation du troisième point du loader*/
 .loader-dots div:nth-child(3) {
     left: 10rem;
     animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
     -webkit-animation: pulsar 1500ms 700ms cubic-bezier(0.2, 0.4, 0.2, 05) 2;
 }
 
+/*animation sur les points du loader : transformation de leur taille*/
 @keyframes pulsar {
 
     0%,
@@ -141,5 +150,4 @@
         -ms-transform: scale(0.8);
         -o-transform: scale(0.8);
     }
-
 }
