--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+/*dimensions, couleur de fonds et position du logo*/
 header {
     width: auto;
     height: auto;
@@ -5,6 +6,7 @@ header {
     padding: 2rem 1rem 1rem 1rem;
     background-color: white;
 
+    //décalage sur la gauche du logo pour version desktop
     @include tablette-only {
         text-align: start;
     }
